# experimental

./: .gitignore  CMakeLists.txt  arrow-operator.cpp  basic_factory.cpp  basic_thread_pool.cpp  docker-compose.yaml  producer-consumer.cpp  readme.md  threads.cpp
00_Dump/test/: BreadthFirstSearch.cpp  CMakeLists.txt  ConcurrencyTest.cpp  ConstexprConst.cpp  ExeUniquePtr.cpp  FuturePromise.cpp  ScopedThread.cpp  SmartPointers.cpp  UniquePointers.cpp
01_PolicyBasedClassDesign/inc/: CheckingPolicies.h  CreatorPolicies.h  SmartPtr.h
01_PolicyBasedClassDesign/src/: CMakeLists.txt  CreatorPolicies.cpp
01_PolicyBasedClassDesign/test/: CMakeLists.txt  policy-design-test.cpp
02_PartialTemplateSpecialization/inc/: PartialTemplateSpecialization.h
02_PartialTemplateSpecialization/src/: CMakeLists.txt  PartialTemplateSpecialization.cpp
02_PartialTemplateSpecialization/test/: CMakeLists.txt  Type2TypeMapping.cpp  main.cpp
03_DesignPatterns/: CMakeLists.txt
03_DesignPatterns/Creational/: CMakeLists.txt  FactoryMethod.cpp  FactoryMethod.h  RunFactoryMethod.cpp  RunSimpleBuilder.cpp  SimpleBuilder.cpp  SimpleBuilder.h
install/: .gitignore
scripts/: run-all.sh
test/: CMakeLists.txt  PolicyDesign.h  policy-design-test.cpp
